Fixed Article/Card squashed the no-content scroll bug

--- a/src/components/Pages/Article/Card/styles.scss
+++ b/src/components/Pages/Article/Card/styles.scss
@@ -177,22 +177,23 @@ main {
         min-width: 0px;
 
         .thumb {
-            height: 260px;
+            height: 220px;
+            background-size: 500px;
         }
 
         .details {
-            grid-template-rows: 60px auto;
+            grid-template-rows: 60px 40px auto;
+            grid-template-rows: 1fr;
 
             .links {
-                grid-column: 2/3;
-                grid-row: 1/2;
-
+                grid-row: 2/3;
                 align-items: center;
-                place-content: end;
+                margin-top: 0px !important;
+                margin-bottom: 20px;
             }
 
             .tags {
-                grid-column: 1/3;
+                grid-row: 3/4;
                 flex-wrap: wrap;
                 margin-bottom: 20px;
                 margin-left: 0px !important;
